--- a/app/src/main/res/layout-land/swipeviewfragment.xml
+++ b/app/src/main/res/layout-land/swipeviewfragment.xml
@@ -1,134 +1,163 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/gradient_background"
-    android:focusableInTouchMode="true"
-    android:orientation="horizontal"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activity.MainActivity">
-
-    <ImageView
-        android:id="@+id/MusicPlayerFragment_ImageView_imageView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:contentDescription="@string/logo"
-        android:scaleType="fitXY"
-        android:src="@drawable/spotocracylogo" />
-    >
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        tools:context=".activity.MainActivity"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/primary5"
+        android:focusableInTouchMode="true"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
-        <TextView
-            android:id="@+id/MusicPlayerFragment_TextView_songinfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="10dp"
-            android:text="Velg en spilleliste"
-            android:textSize="20sp" />
-
-        <EditText
-            android:id="@+id/MusicPlayerFragment_EditText_playlist"
+        <ImageView
+            android:id="@+id/MusicPlayerFragment_ImageView_imageView"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:background="@color/white"
-            android:hint="@string/playlistname"
-            android:inputType="textEmailAddress"
-            android:padding="10dp"
-            android:text="" />
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:contentDescription="@string/logo"
+            android:scaleType="fitXY"
+            android:src="@drawable/spotocracylogo"/>
+        >
 
         <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:padding="15dp"
-            android:weightSum="10">
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/MusicPlayerFragment_TextView_timePlayed"
+                android:id="@+id/MusicPlayerFragment_TextView_songinfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/defaultTime"
-                android:textAlignment="center"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textSize="20sp" />
+                android:padding="10dp"
+                android:text="Velg en spilleliste"
+                android:textColor="@color/complementary1"
+                android:textSize="20sp"/>
+
+            <EditText
+                android:id="@+id/MusicPlayerFragment_EditText_playlist"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.2"
+                android:background="@color/white"
+                android:hint="@string/playlistname"
+                android:inputType="textEmailAddress"
+                android:padding="10dp"
+                android:text=""/>
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_weight="8"
-                android:orientation="vertical">
-
-                <ProgressBar
-                    android:id="@+id/MusicPlayerFragment_ProgressBar_progressBar"
-                    style="@android:style/Widget.ProgressBar.Horizontal"
-                    android:layout_width="fill_parent"
-                    android:layout_height="10dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginTop="10dp"
-                    android:progress="0" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/MusicPlayerFragment_TextView_songLength"
-                android:layout_width="wrap_content"
+                android:id="@+id/linearLayout"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:paddingLeft="10dp"
-                android:text="@string/defaultTime"
-                android:textAlignment="center"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textSize="20sp" />
+                android:orientation="horizontal"
+                android:padding="15dp"
+                android:weightSum="10">
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/MusicPlayerFragment_TextView_timePlayed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/defaultTime"
+                    android:textAlignment="center"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@color/complementary1"
+                    android:textSize="20sp"
+                    android:visibility="invisible"/>
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="8"
+                    android:orientation="vertical">
 
-            <RelativeLayout
+                    <ProgressBar
+                        android:id="@+id/MusicPlayerFragment_ProgressBar_progressBar"
+                        style="@android:style/Widget.ProgressBar.Horizontal"
+                        android:layout_width="fill_parent"
+                        android:layout_height="10dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginTop="10dp"
+                        android:progress="0"
+                        android:progressDrawable="@drawable/progressbarcolor"
+                        android:visibility="invisible"
+                        />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/MusicPlayerFragment_TextView_songLength"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingLeft="10dp"
+                    android:text="@string/defaultTime"
+                    android:textAlignment="center"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@color/complementary1"
+                    android:textSize="20sp"
+                    android:visibility="invisible"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/MusicPlayerFragment_LinearLayout_bottomLine"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:orientation="horizontal">
 
-                <ImageButton
-                    android:id="@+id/MusicPlayerFragment_ImageButton_play_or_pause"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:adjustViewBounds="true"
-                    android:background="#00000000"
-                    android:contentDescription="@string/playOrPause"
-                    android:gravity="center_horizontal"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/synchronize" />
-            </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/MusicPlayerFragment_ImageButton_play_or_pause"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:adjustViewBounds="true"
+                        android:background="#00000000"
+                        android:contentDescription="@string/playOrPause"
+                        android:gravity="center_horizontal"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/synchronize"/>
+
+                    <android.support.design.widget.FloatingActionButton
+                        android:id="@+id/MusicPlayerFragment_FloatingActionButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="16dp"
+                        android:layout_alignParentRight="true"
+                        android:clickable="true"
+                        android:elevation="5dp"
+                        android:src="@drawable/synchronize"
+                        app:layout_anchor="@id/MusicPlayerFragment_LinearLayout_bottomLine"
+                        app:layout_anchorGravity="bottom|right|end"/>
+
+                </RelativeLayout>
+
+
+            </LinearLayout>
+
 
 
         </LinearLayout>
+
+
+
     </LinearLayout>
 
-    <!--<Spinner
-         android:id="@+id/planets_spinner"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content" />-->
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
